<resources>
    <string name="app_name">Marketim</string>
    <string name="remember_me">Beni Hatırla</string>
    <string name="login">Giriş</string>
    <string name="user_name">Kullanıcı Adı</string>
    <string name="password">Şifre</string>
    <string name="empty_password">Şifre alanı boş bırakılamaz</string>
    <string name="empty_user_name">Kullanıcı adı boş bırakılamaz</string>
    <string name="wrong_information">Kullanıcı adı ya da şifre hatalı</string>
    <string name="logout">Çıkış Yap</string>
    <string name="my_orders">Siparişlerim</string>
    <string name="are_you_sure_logout">Çıkış yapmak istediğine emin misin?</string>
    <string name="dismiss">Vazgeç</string>
    <string name="warning">Uyarı</string>

</resources>
