<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
        <View
            android:id="@+id/toolbarArea"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@color/colorAccent" />
        <TextView
            android:layout_width="wrap_content"
            android:text="@string/app_name"
            android:gravity="center"
            android:textAllCaps="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/toolbarArea"
            app:layout_constraintBottom_toBottomOf="@id/toolbarArea"
            android:id="@+id/toolbarText"
            android:textSize="19sp"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:layout_height="wrap_content" />
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:paddingTop="@dimen/_10sdp"
            android:clipToPadding="false"
            android:id="@+id/order_view"
            app:layout_constraintTop_toBottomOf="@+id/toolbarArea"
            app:layout_constraintBottom_toTopOf="@id/my_orders"
            android:layout_marginBottom="@dimen/_10sdp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:layout_height="0dp">
        </androidx.recyclerview.widget.RecyclerView>
        <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:id="@+id/guideline"
            app:layout_constraintGuide_percent="0.5"
            android:layout_height="wrap_content"/>
        <Button
            android:layout_width="0dp"
            style="?borderlessButtonStyle"
            android:id="@+id/my_orders"
            android:text="@string/my_orders"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_7sdp"
            android:background="@drawable/border_rounded_empty_red"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_height="wrap_content"/>
        <Button
            android:layout_width="0dp"
            android:id="@+id/logout"
            android:textAllCaps="false"
            android:text="@string/logout"
            android:textColor="@color/white"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_7sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/guideline"
            android:background="@drawable/border_rounded_red"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_height="wrap_content"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>